Add Let's Encrypt CA

--- a/enablement-workspace-theia/Dockerfile
+++ b/enablement-workspace-theia/Dockerfile
@@ -22,6 +22,10 @@ chmod +x /usr/local/bin/jq
 # Set the JAVA_HOME variable to make it clear where Java is located
 ENV JAVA_HOME /usr/lib/jvm/java
 
+# Add Let's Encrypt CA to OS trsuted store
+RUN curl -O /etc/pki/ca-trust/source/anchors/lets-encrypt-x3-cross-signed.crt https://letsencrypt.org/certs/lets-encrypt-x3-cross-signed.pem.txt && \
+    update-ca-trust extract
+
 # Install OpenShift Client
 RUN curl https://mirror.openshift.com/pub/openshift-v3/clients/3.11.66/linux/oc.tar.gz | tar -C /usr/local/bin/ -xzf -
 
